--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ class/*
 !class/MathAssessmentAnswers.md
 
 notes/NotesSection5Draft.ipynb
-notes/NotesSection4.ipynb
+!notes/NotesSection4.ipynb
 
 data/1DOULong.nc
 data/2DOULong.nc
